# msa_zria

./: .gitignore  PRODUCTION_PIPELINE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
banking77_msa_zria_artifacts/: Makefile  README_Banking77_MSA_ZRIA.md  manifest_full.json
banking77_msa_zria_artifacts/configs/: gemma4_12b_banking77.yaml  gemma4_12b_banking77_a770.yaml  gemma4_12b_banking77_v100.yaml
banking77_msa_zria_artifacts/docs/: DATASET_CARD.md
banking77_msa_zria_artifacts/examples/: banking77_ablation_cases.jsonl  banking77_customer_support_cases.jsonl  banking77_customer_support_records_eval.jsonl  banking77_manifest.json  (+4 more)
configs/: gemma4_12b.yaml  gemma4_12b_a770.yaml  gemma4_12b_clara_experiment_a770.yaml  gemma4_12b_thinking.yaml  gemma4_12b_thinking_a770.yaml  gemma4_12b_thinking_v100.yaml  gemma4_12b_v100.yaml
docs/: THINKING_VS_NON_THINKING.md
examples/: ablation_cases.jsonl  customer_support_cases.jsonl  customer_support_records_eval.jsonl  customer_support_records_train.jsonl  thinking_cases_eval.jsonl  thinking_cases_train.jsonl  thinking_records_eval.jsonl  thinking_records_train.jsonl  zria_examples_eval.jsonl  zria_examples_train.jsonl  zria_rules.json
scripts/: run_ci.sh  run_live_wwkg_checks.sh
tests/: test_api_integration.py  test_audit.py  test_cli.py  test_config.py  test_dspy_modules.py  test_pipeline_integration.py  test_pyro_runtime.py  test_synthetic.py  test_thinking.py  test_thinking_dspy_modules.py  test_validate_contracts.py  test_wwkg_live.py  test_zria_backend.py  test_zria_learned.py  test_zria_remote.py
(+26 files in other folders)
