[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msa-zria"
version = "0.1.0"
description = "Gemma 4 12B scaffold for MSA, ZRIA, and Pyro reasoning experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bitsandbytes>=0.48.1",
  "peft>=0.19.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
  "transformers>=5.10.1",
  "trl>=0.25.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
