[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msa-zria"
version = "0.1.0"
description = "Gemma 4 12B scaffold for MSA, ZRIA, and Pyro reasoning experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.0.0",
  "bitsandbytes>=0.48.1",
  "datasets>=3.0.0",
  "peft>=0.19.0",
  "pyro-ppl>=1.9.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0.2",
  "ray[tune]>=2.0.0",
  "torch>=2.4.0",
  "transformers>=4.57.0",
  "trl>=0.25.0",
]

[project.scripts]
msa-zria = "msa_zria.cli:main"

[project.optional-dependencies]
api = [
  "dspy>=2.6.0",
  "fastapi>=0.115.0",
  "oxigraph>=0.4.8",
  "uvicorn>=0.30.0",
]
legacy = [
  "huggingface_hub>=0.33.0",
  "numpy>=1.26.0",
  "tqdm>=4.66.0",
]
quantization = [
  "hqq>=0.2.1",
]
test = [
  "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
